--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
             <div class="menu-toggle" onclick="toggleMenu()">☰</div>
             <div class="header-btn-group">
-                <a href="#contact" class="btn-header">Book Service Appointment</a>
-                <a href="#contact" class="btn-header">Get Quotation</a>
+                <a href="#contact" class="btn-header">Book Service</a>
+                <a href="#contact" class="btn-header">Get Quote</a>
                 <a href="#contact" class="btn-header">Book Test Drive</a>
             </div>
         </div>
@@ -25,43 +25,43 @@
                     <li class="nav-item"><a href="index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
                     <li class="nav-item"><a href="#about">About</a></li>
                     
-                    <li class="nav-item">
+                    <li class="nav-item dropdown">
                         <a href="models.html#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/apache160.html">TVS Apache RTR 160 4V</a></li>
-                            <li><a href="models/apache200.html">TVS Apache RTR 200 4V</a></li>
-                            <li><a href="models/raider.html">TVS Raider 125</a></li>
-                            <li><a href="models/ronin.html">TVS Ronin</a></li>
-                            <li><a href="#contact">TVS Radeon</a></li>
-                            <li><a href="#contact">TVS Sport</a></li>
+                            <li><a href="models/apache160.html">Apache RTR 160 4V</a></li>
+                            <li><a href="models/apache200.html">Apache RTR 200 4V</a></li>
+                            <li><a href="models/raider.html">Raider 125</a></li>
+                            <li><a href="models/ronin.html">Ronin</a></li>
+                            <li><a href="#contact">Radeon</a></li>
+                            <li><a href="#contact">Sport</a></li>
                         </ul>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item dropdown">
                         <a href="models.html#scooters">Scooters <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/jupiter113.html">TVS Jupiter 110</a></li>
-                            <li><a href="models/jupiter125.html">TVS Jupiter 125</a></li>
-                            <li><a href="models/ntorq125.html">TVS Ntorq 125</a></li>
-                            <li><a href="models/ntorq150.html">TVS Ntorq Race XP</a></li>
-                            <li><a href="models/zest110.html">TVS Zest 110</a></li>
-                            <li><a href="#contact">TVS Scooty Pep+</a></li>
+                            <li><a href="models/jupiter113.html">Jupiter 110</a></li>
+                            <li><a href="models/jupiter125.html">Jupiter 125</a></li>
+                            <li><a href="models/ntorq125.html">Ntorq 125</a></li>
+                            <li><a href="models/ntorq150.html">Ntorq Race XP</a></li>
+                            <li><a href="models/zest110.html">Zest 110</a></li>
+                            <li><a href="#contact">Scooty Pep+</a></li>
                         </ul>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item dropdown">
                         <a href="models.html#electric">Mopeds <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/xl100.html">TVS XL100 Heavy Duty</a></li>
-                            <li><a href="models/xl100.html">TVS XL100 Comfort</a></li>
+                            <li><a href="models/xl100.html">XL100 Heavy Duty</a></li>
+                            <li><a href="models/xl100.html">XL100 Comfort</a></li>
                         </ul>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item dropdown">
                         <a href="models.html#electric">Electric <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/iqube.html">TVS iQube</a></li>
-                            <li><a href="models/iqube.html">TVS iQube S</a></li>
+                            <li><a href="models/iqube.html">iQube</a></li>
+                            <li><a href="models/iqube.html">iQube S</a></li>
                             <li><a href="#contact">TVS X</a></li>
                         </ul>
                     </li>
@@ -136,9 +136,9 @@
         <div class="container">
             <div class="text-center section-header"><h2>Happy Riders</h2><p>What our customers say about Tirumala TVS.</p></div>
             <div class="grid-3" style="margin-top: 40px;">
-                <div class="review-card"><div class="stars">★★★★★</div><p>"Excellent experience buying my new Apache RTR 160 4V. The sales team was polite, and the delivery process was very smooth. Highly recommend!"</p><h4>– Arjun Kumar</h4><span>Apache Owner</span></div>
-                <div class="review-card"><div class="stars">★★★★★</div><p>"I was confused between Jupiter and Ntorq. The staff patiently explained the features of both. Bought the Jupiter 110 and I love it!"</p><h4>– Priya Sharma</h4><span>Jupiter Owner</span></div>
-                <div class="review-card"><div class="stars">★★★★★</div><p>"Best service center in Bidarahalli. My bike had a starting issue that local mechanics couldn't fix. The technicians here fixed it in 2 hours."</p><h4>– Rahul M.</h4><span>Service Customer</span></div>
+                <div class="review-card"><div class="stars">★★★★★</div><p>"Excellent experience buying my new Apache RTR 160 4V."</p><h4>– Arjun Kumar</h4><span>Apache Owner</span></div>
+                <div class="review-card"><div class="stars">★★★★★</div><p>"I was confused between Jupiter and Ntorq. The staff helped me decide."</p><h4>– Priya Sharma</h4><span>Jupiter Owner</span></div>
+                <div class="review-card"><div class="stars">★★★★★</div><p>"Best service center in Bidarahalli. Fast and reliable."</p><h4>– Rahul M.</h4><span>Service Customer</span></div>
             </div>
         </div>
     </section>
@@ -174,9 +174,9 @@
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="index.html#about">About Us</a></li><li><a href="index.html#contact">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="#about">About Us</a></li><li><a href="#contact">Contact Us</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="#motorcycles">Motorcycles</a></li><li><a href="#scooters">Scooters</a></li></ul></div>
-                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="index.html#contact">Tirumala TVS Bidarahalli</a></li></ul></div>
+                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="#contact">Tirumala TVS Bidarahalli</a></li></ul></div>
             </div>
         </div>
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
@@ -191,6 +191,21 @@
             if(nav.style.display === "block") { nav.style.display = "none"; } 
             else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
         }
+
+        // Mobile Accordion Logic
+        document.addEventListener("DOMContentLoaded", function() {
+            if (window.innerWidth <= 900) {
+                var dropdowns = document.querySelectorAll('.nav-item.dropdown > a');
+                dropdowns.forEach(function(link) {
+                    link.addEventListener('click', function(e) {
+                        e.preventDefault(); 
+                        var parent = this.parentElement;
+                        parent.classList.toggle('active');
+                    });
+                });
+            }
+        });
+
         window.addEventListener('scroll', function() {
             var scrollBtn = document.querySelector('.scroll-top-btn');
             if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } else { scrollBtn.classList.remove('visible'); }
