--- a/models.html
+++ b/models.html
@@ -14,8 +14,8 @@
             <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
             <div class="menu-toggle" onclick="toggleMenu()">☰</div>
             <div class="header-btn-group">
-                <a href="index.html#contact" class="btn-header">Book Service Appointment</a>
-                <a href="index.html#contact" class="btn-header">Get Quotation</a>
+                <a href="index.html#contact" class="btn-header">Book Service</a>
+                <a href="index.html#contact" class="btn-header">Get Quote</a>
                 <a href="index.html#contact" class="btn-header">Book Test Drive</a>
             </div>
         </div>
@@ -28,41 +28,34 @@
                     <li class="nav-item dropdown">
                         <a href="#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/apache160.html">TVS Apache RTR 160 4V</a></li>
-                            <li><a href="models/apache200.html">TVS Apache RTR 200 4V</a></li>
-                            <li><a href="models/raider.html">TVS Raider 125</a></li>
-                            <li><a href="models/ronin.html">TVS Ronin</a></li>
-                            <li><a href="#contact">TVS Radeon</a></li>
-                            <li><a href="#contact">TVS Sport</a></li>
+                            <li><a href="models/apache160.html">Apache RTR 160 4V</a></li>
+                            <li><a href="models/apache200.html">Apache RTR 200 4V</a></li>
+                            <li><a href="models/raider.html">Raider 125</a></li>
+                            <li><a href="models/ronin.html">Ronin</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item dropdown">
                         <a href="#scooters">Scooters <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/jupiter113.html">TVS Jupiter 110</a></li>
-                            <li><a href="models/jupiter125.html">TVS Jupiter 125</a></li>
-                            <li><a href="models/ntorq125.html">TVS Ntorq 125</a></li>
-                            <li><a href="models/ntorq150.html">TVS Ntorq Race XP</a></li>
-                            <li><a href="models/zest110.html">TVS Zest 110</a></li>
-                            <li><a href="#contact">TVS Scooty Pep+</a></li>
+                            <li><a href="models/jupiter113.html">Jupiter 110</a></li>
+                            <li><a href="models/jupiter125.html">Jupiter 125</a></li>
+                            <li><a href="models/ntorq125.html">Ntorq 125</a></li>
+                            <li><a href="models/zest110.html">Zest 110</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item dropdown">
                         <a href="#electric">Mopeds <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/xl100.html">TVS XL100 Heavy Duty</a></li>
-                            <li><a href="models/xl100.html">TVS XL100 Comfort</a></li>
+                            <li><a href="models/xl100.html">XL100</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item dropdown">
                         <a href="#electric">Electric <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/iqube.html">TVS iQube</a></li>
-                            <li><a href="models/iqube.html">TVS iQube S</a></li>
-                            <li><a href="#contact">TVS X</a></li>
+                            <li><a href="models/iqube.html">iQube</a></li>
                         </ul>
                     </li>
 
@@ -120,15 +113,6 @@
                             <a href="models/raider.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-                    <div class="card">
-                        <span class="badge">PREMIUM</span>
-                        <div class="card-img"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'"></div>
-                        <div class="card-info">
-                            <h3>TVS Ronin</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 1,49,000*</p>
-                            <a href="models/ronin.html" class="btn btn-outline full-width">View Details</a>
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -160,24 +144,6 @@
                             <h3>Ntorq 125</h3>
                             <p style="color:var(--primary); font-weight:bold;">Starts ₹ 84,000*</p>
                             <a href="models/ntorq125.html" class="btn btn-outline full-width">View Details</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <span class="badge">POWER</span>
-                        <div class="card-img"><img src="assets/ntorqxp.jpg" alt="Ntorq Race XP" onerror="this.src='https://placehold.co/600x400?text=Ntorq+XP'"></div>
-                        <div class="card-info">
-                            <h3>Ntorq Race XP</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 97,000*</p>
-                            <a href="models/ntorq150.html" class="btn btn-outline full-width">View Details</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <span class="badge">LIGHT</span>
-                        <div class="card-img"><img src="assets/zest.jpg" alt="Zest 110" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
-                        <div class="card-info">
-                            <h3>TVS Zest 110</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 74,000*</p>
-                            <a href="models/zest110.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
                 </div>
@@ -233,6 +199,20 @@
             if(nav.style.display === "block") { nav.style.display = "none"; } 
             else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
         }
+
+        // Mobile Accordion Logic
+        document.addEventListener("DOMContentLoaded", function() {
+            if (window.innerWidth <= 900) {
+                var dropdowns = document.querySelectorAll('.nav-item.dropdown > a');
+                dropdowns.forEach(function(link) {
+                    link.addEventListener('click', function(e) {
+                        e.preventDefault(); 
+                        var parent = this.parentElement;
+                        parent.classList.toggle('active');
+                    });
+                });
+            }
+        });
     </script>
 </body>
 </html>
