--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                             <li><a href="models/apache200.html">Apache RTR 200 4V</a></li>
                             <li><a href="models/raider.html">Raider 125</a></li>
                             <li><a href="models/ronin.html">Ronin</a></li>
-                            <li><a href="#contact">Radeon</a></li>
-                            <li><a href="#contact">Sport</a></li>
+                            <li><a href="#contact">Radeon (Enquire)</a></li>
+                            <li><a href="#contact">Sport (Enquire)</a></li>
                         </ul>
                     </li>
 
@@ -45,7 +45,7 @@
                             <li><a href="models/ntorq125.html">Ntorq 125</a></li>
                             <li><a href="models/ntorq150.html">Ntorq Race XP</a></li>
                             <li><a href="models/zest110.html">Zest 110</a></li>
-                            <li><a href="#contact">Scooty Pep+</a></li>
+                            <li><a href="#contact">Scooty Pep+ (Enquire)</a></li>
                         </ul>
                     </li>
 
@@ -62,7 +62,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="models/iqube.html">iQube</a></li>
                             <li><a href="models/iqube.html">iQube S</a></li>
-                            <li><a href="#contact">TVS X</a></li>
+                            <li><a href="#contact">TVS X (Enquire)</a></li>
                         </ul>
                     </li>
 
@@ -116,17 +116,26 @@
                 <div class="card">
                     <span class="badge">New Launch</span>
                     <div class="card-img"><img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400'"></div>
-                    <div class="card-info"><h3>Jupiter 110</h3><a href="models/jupiter113.html" class="btn btn-outline">View Specs</a></div>
+                    <div class="card-info">
+                        <h3>Jupiter 110</h3>
+                        <a href="models/jupiter113.html" class="btn btn-outline">View Specs</a>
+                    </div>
                 </div>
                 <div class="card">
                     <span class="badge">Trending</span>
                     <div class="card-img"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400'"></div>
-                    <div class="card-info"><h3>Raider 125</h3><a href="models/raider.html" class="btn btn-outline">View Specs</a></div>
+                    <div class="card-info">
+                        <h3>Raider 125</h3>
+                        <a href="models/raider.html" class="btn btn-outline">View Specs</a>
+                    </div>
                 </div>
                 <div class="card">
                     <span class="badge">Premium</span>
                     <div class="card-img"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400'"></div>
-                    <div class="card-info"><h3>TVS Ronin</h3><a href="models/ronin.html" class="btn btn-outline">View Specs</a></div>
+                    <div class="card-info">
+                        <h3>TVS Ronin</h3>
+                        <a href="models/ronin.html" class="btn btn-outline">View Specs</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -175,7 +184,7 @@
         <div class="footer-main">
             <div class="container footer-cols">
                 <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="#about">About Us</a></li><li><a href="#contact">Contact Us</a></li></ul></div>
-                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="#motorcycles">Motorcycles</a></li><li><a href="#scooters">Scooters</a></li></ul></div>
+                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
                 <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="#contact">Tirumala TVS Bidarahalli</a></li></ul></div>
             </div>
         </div>
@@ -191,7 +200,7 @@
             if(nav.style.display === "block") { nav.style.display = "none"; } 
             else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
         }
-
+        
         // Mobile Accordion Logic
         document.addEventListener("DOMContentLoaded", function() {
             if (window.innerWidth <= 900) {
