--- a/thankyou.html
+++ b/thankyou.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thank You | Tirumala TVS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Poppins', sans-serif; text-align: center; padding: 100px 20px; background: #f4f4f4; margin: 0; }
+        .thank-you-box { background: white; padding: 50px; border-radius: 8px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); max-width: 600px; margin: 0 auto; }
+        h1 { font-family: 'Oswald', sans-serif; color: #1a3b8c; font-size: 3rem; margin-bottom: 20px; }
+        p { font-size: 1.2rem; color: #555; margin-bottom: 10px; }
+        .btn { display: inline-block; background: #1a3b8c; color: white; padding: 12px 30px; text-decoration: none; border-radius: 4px; margin-top: 30px; font-weight: bold; }
+        .btn:hover { background: #0f255a; }
+    </style>
+</head>
+<body>
+    <div class="thank-you-box">
+        <div style="font-size: 4rem; color: #25D366; margin-bottom: 20px;">✓</div>
+        <h1>Thank You!</h1>
+        <p>Your service request has been received successfully.</p>
+        <p>Our service advisor will call you shortly to confirm your booking.</p>
+        <a href="index.html" class="btn">Back to Home</a>
+    </div>
+</body>
+</html>
