--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="menu-toggle" onclick="toggleMenu()">☰</div>
             <div class="header-btn-group">
                 <a href="#contact" class="btn-header">Book Service</a>
-                <a href="#contact" class="btn-header">Get Quote</a>
+                <a href="#contact" class="btn-header">Get Quotation</a>
                 <a href="#contact" class="btn-header">Book Test Drive</a>
             </div>
         </div>
@@ -28,41 +28,41 @@
                     <li class="nav-item dropdown">
                         <a href="models.html#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/apache160.html">Apache RTR 160 4V</a></li>
-                            <li><a href="models/apache200.html">Apache RTR 200 4V</a></li>
-                            <li><a href="models/raider.html">Raider 125</a></li>
-                            <li><a href="models/ronin.html">Ronin</a></li>
-                            <li><a href="#contact">Radeon (Enquire)</a></li>
-                            <li><a href="#contact">Sport (Enquire)</a></li>
+                            <li><a href="models/apache160.html">TVS Apache RTR 160 4V</a></li>
+                            <li><a href="models/apache200.html">TVS Apache RTR 200 4V</a></li>
+                            <li><a href="models/raider.html">TVS Raider 125</a></li>
+                            <li><a href="models/ronin.html">TVS Ronin</a></li>
+                            <li><a href="#contact">TVS Radeon</a></li>
+                            <li><a href="#contact">TVS Sport</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item dropdown">
                         <a href="models.html#scooters">Scooters <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/jupiter113.html">Jupiter 110</a></li>
-                            <li><a href="models/jupiter125.html">Jupiter 125</a></li>
-                            <li><a href="models/ntorq125.html">Ntorq 125</a></li>
-                            <li><a href="models/ntorq150.html">Ntorq Race XP</a></li>
-                            <li><a href="models/zest110.html">Zest 110</a></li>
-                            <li><a href="#contact">Scooty Pep+ (Enquire)</a></li>
+                            <li><a href="models/jupiter113.html">TVS Jupiter 110</a></li>
+                            <li><a href="models/jupiter125.html">TVS Jupiter 125</a></li>
+                            <li><a href="models/ntorq125.html">TVS Ntorq 125</a></li>
+                            <li><a href="models/ntorq150.html">TVS Ntorq Race XP</a></li>
+                            <li><a href="models/zest110.html">TVS Zest 110</a></li>
+                            <li><a href="#contact">TVS Scooty Pep+</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item dropdown">
                         <a href="models.html#electric">Mopeds <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/xl100.html">XL100 Heavy Duty</a></li>
-                            <li><a href="models/xl100.html">XL100 Comfort</a></li>
+                            <li><a href="models/xl100.html">TVS XL100 Heavy Duty</a></li>
+                            <li><a href="models/xl100.html">TVS XL100 Comfort</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item dropdown">
                         <a href="models.html#electric">Electric <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/iqube.html">iQube</a></li>
-                            <li><a href="models/iqube.html">iQube S</a></li>
-                            <li><a href="#contact">TVS X (Enquire)</a></li>
+                            <li><a href="models/iqube.html">TVS iQube</a></li>
+                            <li><a href="models/iqube.html">TVS iQube S</a></li>
+                            <li><a href="#contact">TVS X</a></li>
                         </ul>
                     </li>
 
@@ -116,26 +116,17 @@
                 <div class="card">
                     <span class="badge">New Launch</span>
                     <div class="card-img"><img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400'"></div>
-                    <div class="card-info">
-                        <h3>Jupiter 110</h3>
-                        <a href="models/jupiter113.html" class="btn btn-outline">View Specs</a>
-                    </div>
+                    <div class="card-info"><h3>Jupiter 110</h3><a href="models/jupiter113.html" class="btn btn-outline">View Specs</a></div>
                 </div>
                 <div class="card">
                     <span class="badge">Trending</span>
                     <div class="card-img"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400'"></div>
-                    <div class="card-info">
-                        <h3>Raider 125</h3>
-                        <a href="models/raider.html" class="btn btn-outline">View Specs</a>
-                    </div>
+                    <div class="card-info"><h3>Raider 125</h3><a href="models/raider.html" class="btn btn-outline">View Specs</a></div>
                 </div>
                 <div class="card">
                     <span class="badge">Premium</span>
                     <div class="card-img"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400'"></div>
-                    <div class="card-info">
-                        <h3>TVS Ronin</h3>
-                        <a href="models/ronin.html" class="btn btn-outline">View Specs</a>
-                    </div>
+                    <div class="card-info"><h3>TVS Ronin</h3><a href="models/ronin.html" class="btn btn-outline">View Specs</a></div>
                 </div>
             </div>
         </div>
@@ -152,23 +143,55 @@
         </div>
     </section>
 
-    <section id="contact" class="section-padding bg-light">
+    <section id="contact" class="service-section">
         <div class="container">
-            <div class="contact-layout">
-                <div class="contact-form-wrapper">
-                    <h2>Get In Touch</h2>
+            <div class="service-layout">
+                <div class="service-form">
                     <form action="https://formspree.io/f/xqezrzkn" method="POST">
-                        <div class="form-group"><input type="text" name="name" required placeholder="Your Name"></div>
-                        <div class="form-group"><input type="tel" name="phone" required placeholder="Phone Number"></div>
-                        <div class="form-group"><select name="purpose"><option>General Enquiry</option><option>Book Test Ride</option><option>Book Service</option></select></div>
-                        <button type="submit" class="btn btn-primary full-width">Submit Request</button>
+                        <input type="hidden" name="_next" value="thankyou.html">
+                        <input type="hidden" name="_subject" value="New Service Appointment Request">
+
+                        <label>Name <span class="required">*</span></label>
+                        <input type="text" name="name" placeholder="Your fullname" required>
+
+                        <label>Email <span class="required">*</span></label>
+                        <input type="email" name="email" placeholder="Your email address" required>
+
+                        <label>Phone <span class="required">*</span></label>
+                        <input type="tel" name="phone" placeholder="Your phone number" required>
+
+                        <label>Date <span class="required">*</span></label>
+                        <input type="date" name="date" required>
+
+                        <label>Models <span class="required">*</span></label>
+                        <select name="model" required>
+                            <option value="" disabled selected>Select a Model</option>
+                            <option value="Apache Series">Apache Series</option>
+                            <option value="Jupiter Series">Jupiter Series</option>
+                            <option value="Ntorq">Ntorq</option>
+                            <option value="Raider">Raider</option>
+                            <option value="Ronin">Ronin</option>
+                            <option value="iQube">iQube</option>
+                            <option value="Other">Other</option>
+                        </select>
+
+                        <button type="submit" class="btn-submit-service">Raise Service Request</button>
                     </form>
                 </div>
-                <div class="contact-info-wrapper">
-                    <h2>Visit Us</h2>
-                    <p style="margin-top: 20px; font-size: 1.2rem;">Tirumala TVS Bidarahalli</p>
-                    <p>Main Road, Bidarahalli, Bangalore - 560049</p>
-                    <div style="margin-top: 40px;"><p style="font-size: 1.5rem; font-weight: bold;">📞 +91 99649 46512</p></div>
+
+                <div class="service-info">
+                    <h3>Here is how the Online Appointment form works</h3>
+                    <div class="step-item"><div class="step-text"><strong>Step 1:</strong> Fill in your contact and vehicle details, select your service type and preferred time.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 2:</strong> Our service advisor will call you to confirm the booking and discuss your requirements.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 3:</strong> You’ll get a confirmation and reminder via SMS or WhatsApp.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 4:</strong> Visit our service center at the scheduled time.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 5:</strong> We'll notify you once your vehicle is ready for pickup.</div></div>
+                    
+                    <div style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee;">
+                        <h4 style="margin-bottom: 10px;">Tirumala TVS Bidarahalli</h4>
+                        <p style="color: #666; font-size: 0.9rem;">Main Road, Bidarahalli, Bangalore - 560049</p>
+                        <p style="color: #666; font-size: 0.9rem;">📞 +91 99649 46512</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -184,7 +207,7 @@
         <div class="footer-main">
             <div class="container footer-cols">
                 <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="#about">About Us</a></li><li><a href="#contact">Contact Us</a></li></ul></div>
-                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
+                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="#motorcycles">Motorcycles</a></li><li><a href="#scooters">Scooters</a></li></ul></div>
                 <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="#contact">Tirumala TVS Bidarahalli</a></li></ul></div>
             </div>
         </div>
