--- a/models.html
+++ b/models.html
@@ -41,7 +41,6 @@
                             <li><a href="models/jupiter113.html">Jupiter 110</a></li>
                             <li><a href="models/jupiter125.html">Jupiter 125</a></li>
                             <li><a href="models/ntorq125.html">Ntorq 125</a></li>
-                            <li><a href="models/ntorq150.html">Ntorq Race XP</a></li>
                             <li><a href="models/zest110.html">Zest 110</a></li>
                         </ul>
                     </li>
@@ -49,7 +48,7 @@
                     <li class="nav-item dropdown">
                         <a href="#electric">Mopeds <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/xl100.html">XL100 Heavy Duty</a></li>
+                            <li><a href="models/xl100.html">XL100</a></li>
                         </ul>
                     </li>
 
@@ -114,15 +113,6 @@
                             <a href="models/raider.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-                    <div class="card">
-                        <span class="badge">PREMIUM</span>
-                        <div class="card-img"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'"></div>
-                        <div class="card-info">
-                            <h3>TVS Ronin</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 1,49,000*</p>
-                            <a href="models/ronin.html" class="btn btn-outline full-width">View Details</a>
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -154,24 +144,6 @@
                             <h3>Ntorq 125</h3>
                             <p style="color:var(--primary); font-weight:bold;">Starts ₹ 84,000*</p>
                             <a href="models/ntorq125.html" class="btn btn-outline full-width">View Details</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <span class="badge">POWER</span>
-                        <div class="card-img"><img src="assets/ntorqxp.jpg" alt="Ntorq Race XP" onerror="this.src='https://placehold.co/600x400?text=Ntorq+XP'"></div>
-                        <div class="card-info">
-                            <h3>Ntorq Race XP</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 97,000*</p>
-                            <a href="models/ntorq150.html" class="btn btn-outline full-width">View Details</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <span class="badge">LIGHT</span>
-                        <div class="card-img"><img src="assets/zest.jpg" alt="Zest 110" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
-                        <div class="card-info">
-                            <h3>TVS Zest 110</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 74,000*</p>
-                            <a href="models/zest110.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
                 </div>
@@ -220,9 +192,6 @@
         </div>
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
-
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
         function toggleMenu() {
