--- a/service.html
+++ b/service.html
@@ -1,1 +1,85 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book Service | Tirumala TVS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+    <header class="main-header">
+        <div class="container header-top">
+            <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
+            <div class="header-btn-group">
+                <a href="index.html" class="btn-header">Back to Home</a>
+            </div>
+        </div>
+    </header>
+
+    <div class="models-header" style="background: #111; color: white; padding: 40px 0; text-align: center;">
+        <div class="container">
+            <h1 style="font-size: 2.5rem; font-family: 'Oswald', sans-serif; text-transform: uppercase;">Book A Service</h1>
+            <p>Schedule your maintenance with our certified experts.</p>
+        </div>
+    </div>
+
+    <section class="service-section">
+        <div class="container">
+            <div class="service-layout">
+                
+                <div class="service-form">
+                    <form action="https://formspree.io/f/xqezrzkn" method="POST">
+                        <input type="hidden" name="_next" value="thankyou.html">
+                        <input type="hidden" name="_subject" value="New Service Booking">
+
+                        <label>Name <span class="required">*</span></label>
+                        <input type="text" name="name" placeholder="Your fullname" required>
+
+                        <label>Phone <span class="required">*</span></label>
+                        <input type="tel" name="phone" placeholder="Your phone number" required>
+
+                        <label>Vehicle Registration No. <span class="required">*</span></label>
+                        <input type="text" name="vehicle_no" placeholder="KA-00-XX-0000" required>
+
+                        <label>Preferred Date <span class="required">*</span></label>
+                        <input type="date" name="date" required>
+
+                        <label>Service Type <span class="required">*</span></label>
+                        <select name="service_type" required>
+                            <option value="General Service">General Paid Service</option>
+                            <option value="Free Service">Free Service (New Vehicle)</option>
+                            <option value="Oil Change">Oil Change Only</option>
+                            <option value="Repair/Accidental">Repair / Accidental</option>
+                            <option value="Breakdown">Breakdown Assistance</option>
+                        </select>
+
+                        <button type="submit" class="btn-submit-service">Confirm Appointment</button>
+                    </form>
+                </div>
+
+                <div class="service-info">
+                    <h3>How the Appointment works</h3>
+                    <div class="step-item"><div class="step-text"><strong>Step 1:</strong> Fill in your contact and vehicle details.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 2:</strong> Our advisor will call to confirm the slot.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 3:</strong> Receive confirmation via SMS/WhatsApp.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 4:</strong> Drop your vehicle at the scheduled time.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 5:</strong> We notify you when it's ready!</div></div>
+                    
+                    <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #eee;">
+                        <h4>Service Center Location</h4>
+                        <p style="color: #666;">Main Road, Bidarahalli, Bangalore - 560049</p>
+                        <p style="color: #666;">📞 +91 99649 46512</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div>
+    </footer>
+</body>
+</html>
